--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-    <img src="assets/img/logo2.jpg" alt="Logo Marcelo Beltrame Advocacia">
+    <img src="assets/img/logo2.png" alt="Logo Marcelo Beltrame Advocacia">
     <nav>
         <a href="index.html">Início</a>
         <a href="sobre.html">Sobre</a>
