--- a/sobre.html
+++ b/sobre.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -14,7 +13,7 @@
     <img src="assets/img/logo2.png" alt="Logo Marcelo Beltrame Advocacia">
     <nav>
         <a href="index.html">Início</a>
-        <a href="sobre.html">Sobre</a>
+        <a href="sobre.html" class="active">Sobre</a>
         <a href="atuacao.html">Atuação</a>
         <a href="blog.html">Artigos</a>
         <a href="contato.html">Contato</a>
@@ -22,10 +21,23 @@
 </header>
 
 <section class="section">
+
     <h2>Sobre o Advogado</h2>
-    <p>Marcelo Beltrame é advogado inscrito na OAB/PR 113541, com atuação voltada à solução estratégica de conflitos e à orientação jurídica preventiva. Seu trabalho é pautado na ética, na responsabilidade técnica e na clareza na comunicação com o cliente.</p>
-    <p>Atua nas áreas de Direito Civil, Família, Consumidor, Empresarial, Previdenciário e Trabalhista, tanto na esfera consultiva quanto contenciosa, buscando sempre a melhor alternativa jurídica possível em cada situação.</p>
-    <p>O atendimento é realizado de forma personalizada, com análise detalhada dos documentos e dos fatos apresentados, prezando pela transparência quanto a riscos, prazos e potenciais desdobramentos do processo ou da negociação.</p>
+
+    <!-- BLOCO COM FOTO + TEXTO -->
+    <div class="sobre-container">
+
+        <div class="sobre-foto">
+            <img src="assets/img/marcelo-about.png.png" alt="Foto do advogado Marcelo Beltrame">
+        </div>
+
+        <div class="sobre-texto">
+            <p>Marcelo Beltrame é advogado inscrito na OAB/PR 113541, com atuação voltada à solução estratégica de conflitos e à orientação jurídica preventiva. Seu trabalho é pautado na ética, na responsabilidade técnica e na clareza na comunicação com o cliente.</p>
+            <p>Atua nas áreas de Direito Civil, Família, Consumidor, Empresarial, Previdenciário e Trabalhista, tanto na esfera consultiva quanto contenciosa, buscando sempre a melhor alternativa jurídica possível em cada situação.</p>
+            <p>O atendimento é realizado de forma personalizada, com análise detalhada dos documentos e dos fatos apresentados, prezando pela transparência quanto a riscos, prazos e potenciais desdobramentos do processo ou da negociação.</p>
+        </div>
+
+    </div>
 </section>
 
 <footer>
