--- a/index.html
+++ b/index.html
@@ -1,21 +1,5 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Marcelo Beltrame – Advogado em Direito Civil, Família e Trabalhista</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Descrição para Google -->
-    <meta name="description" content="Advogado Marcelo Beltrame – OAB/PR 113541. Atuação em Direito Civil, Família, Consumidor, Empresarial, Previdenciário e Trabalhista. Atendimento jurídico técnico e humanizado.">
-
-    <!-- Palavras-chave básicas -->
-    <meta name="keywords" content="advogado, direito civil, direito de família, direito do consumidor, direito empresarial, direito previdenciário, direito trabalhista, Ivaiporã, Paraná, Marcelo Beltrame">
-
-    <!-- Autor -->
-    <meta name="author" content="Marcelo Beltrame">
-
-    <link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,29 +7,28 @@
     <!-- TÍTULO OTIMIZADO PARA SEO -->
     <title>Marcelo Beltrame | Advogado em Ivaiporã – Direito Civil, Consumidor, Família, Trabalho e Previdenciário</title>
 
-    <!-- META DESCRIPTION (fundamental para ranqueamento local) -->
-    <meta name="description" content="Advogado em Ivaiporã – Direito Civil, Família, Consumidor, Previdenciário, Empresarial e Trabalhista. Atendimento técnico, ético e humanizado com foco em soluções jurídicas eficientes. OAB/PR 113541.">
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="Advogado em Ivaiporã – Direito Civil, Família, Consumidor, Previdenciário, Empresarial e Trabalhista. Atendimento técnico, ético e humanizado. OAB/PR 113541.">
 
-    <!-- Palavras-chave (não impacta tanto o Google, mas mantém organização semântica) -->
+    <!-- PALAVRAS-CHAVE (sem impacto direto no Google, mas organizam a semântica) -->
     <meta name="keywords" content="advogado, advogado Ivaiporã, direito civil, direito de família, direito do consumidor, direito previdenciário, direito trabalhista, consultoria jurídica, Ivaiporã, Paraná, advogado empresarial">
 
-    <!-- Autor -->
+    <!-- AUTOR -->
     <meta name="author" content="Marcelo Beltrame – OAB/PR 113541">
 
-    <!-- Diretriz para garantir indexação -->
+    <!-- GARANTIR INDEXAÇÃO -->
     <meta name="robots" content="index, follow">
 
-    <!-- Open Graph (integrações para WhatsApp, Instagram, LinkedIn) -->
+    <!-- OPEN GRAPH (WhatsApp, Instagram, LinkedIn, Facebook) -->
     <meta property="og:title" content="Marcelo Beltrame | Advogado em Ivaiporã">
-    <meta property="og:description" content="Atuação estratégica em Direito Civil, Família, Consumidor, Trabalhista e Previdenciário. Atendimento técnico e humanizado.">
+    <meta property="og:description" content="Atuação técnica e humanizada em Direito Civil, Família, Consumidor, Trabalhista e Previdenciário.">
     <meta property="og:image" content="https://marcelobeltrameadv.com.br/assets/img/logo1.png">
     <meta property="og:url" content="https://marcelobeltrameadv.com.br">
     <meta property="og:type" content="website">
 
-    <!-- Estilos -->
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
-
 
 <body>
 
@@ -62,30 +45,34 @@
 
 <section class="hero">
     <img src="assets/img/logo1.png" alt="Marca Marcelo Beltrame" style="height:160px; margin-bottom:18px;">
-    <h1>Marcelo Beltrame – Advogado</h1>
+
+    <!-- H1 PRINCIPAL – SEO -->
+    <h1>Marcelo Beltrame – Advogado em Ivaiporã</h1>
+
     <p>Direito Civil • Família • Consumidor • Empresarial • Previdenciário • Trabalhista</p>
-    <a class="btn" href="https://wa.me/5543984171793" target="_blank" rel="noopener noreferrer">Fale pelo WhatsApp</a>
+
+    <a class="btn" href="https://wa.me/5543984171793" target="_blank" rel="noopener noreferrer">
+        Fale pelo WhatsApp
+    </a>
 </section>
 
 <section class="section">
     <h2>Atuação Jurídica Especializada</h2>
-    <p>Atendimento técnico, ético e humanizado, com foco na prevenção de litígios e na solução segura de conflitos. Atuação tanto na esfera consultiva quanto contenciosa, com análise cuidadosa de cada caso concreto.</p>
+    <p>Atendimento técnico, ético e humanizado, com foco na prevenção de litígios e na solução segura de conflitos. Atuação consultiva e contenciosa, com análise cuidadosa de cada caso concreto.</p>
     <p>O escritório concentra sua atuação em demandas de Direito Civil, Família, Consumidor, Empresarial, Previdenciário e Trabalhista, sempre com transparência quanto a riscos, prazos e possibilidades jurídicas.</p>
 </section>
 
+<!-- BOTÃO FLUTUANTE WHATSAPP -->
 <a href="https://wa.me/5543984171793" 
    class="whatsapp-float" 
    target="_blank" 
-   rel="noopener noreferrer">
-    ☎
-</a>
+   rel="noopener noreferrer">☎</a>
 
 <footer>
     <p>© 2025 – Marcelo Beltrame – Advogado – OAB/PR 113541</p>
     <p>Contato: +55 43 98417-1793 • marcelobeltrameadv@outlook.com</p>
     <p>Endereço: Avenida Maranhão, nº 1174, Centro, Ivaiporã/PR, CEP 86870-000</p>
 </footer>
-
 
 </body>
 </html>
