--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- META DESCRIPTION -->
     <meta name="description" content="Advogado em Ivaiporã – Direito Civil, Família, Consumidor, Previdenciário, Empresarial e Trabalhista. Atendimento técnico, ético e humanizado. OAB/PR 113541.">
 
-    <!-- PALAVRAS-CHAVE (sem impacto direto no Google, mas organizam a semântica) -->
+    <!-- PALAVRAS-CHAVE (organização semântica) -->
     <meta name="keywords" content="advogado, advogado Ivaiporã, direito civil, direito de família, direito do consumidor, direito previdenciário, direito trabalhista, consultoria jurídica, Ivaiporã, Paraná, advogado empresarial">
 
     <!-- AUTOR -->
@@ -19,7 +19,7 @@
     <!-- GARANTIR INDEXAÇÃO -->
     <meta name="robots" content="index, follow">
 
-    <!-- OPEN GRAPH (WhatsApp, Instagram, LinkedIn, Facebook) -->
+    <!-- OPEN GRAPH -->
     <meta property="og:title" content="Marcelo Beltrame | Advogado em Ivaiporã">
     <meta property="og:description" content="Atuação técnica e humanizada em Direito Civil, Família, Consumidor, Trabalhista e Previdenciário.">
     <meta property="og:image" content="https://marcelobeltrameadv.com.br/assets/img/logo1.png">
@@ -60,6 +60,30 @@
     <h2>Atuação Jurídica Especializada</h2>
     <p>Atendimento técnico, ético e humanizado, com foco na prevenção de litígios e na solução segura de conflitos. Atuação consultiva e contenciosa, com análise cuidadosa de cada caso concreto.</p>
     <p>O escritório concentra sua atuação em demandas de Direito Civil, Família, Consumidor, Empresarial, Previdenciário e Trabalhista, sempre com transparência quanto a riscos, prazos e possibilidades jurídicas.</p>
+</section>
+
+<section class="section">
+    <h2>Áreas de Atuação</h2>
+    <ul>
+        <li>Direito Civil – contratos, responsabilidade civil, cobranças e obrigações.</li>
+        <li>Direito de Família – divórcio, guarda, visitas, pensão alimentícia.</li>
+        <li>Direito do Consumidor – negativação indevida, vício de produto, cobranças abusivas.</li>
+        <li>Direito Trabalhista – horas extras, advertências, assédio moral e rescisões.</li>
+        <li>Direito Previdenciário – aposentadorias, BPC/LOAS, revisões e indeferimentos.</li>
+    </ul>
+</section>
+
+<section class="section">
+    <h2>Como Posso Ajudar</h2>
+    <p>O atendimento é realizado com escuta ativa, análise minuciosa dos fatos e apresentação de alternativas jurídicas seguras. Cada caso é tratado de forma individualizada, buscando sempre a solução mais eficiente e adequada à realidade do cliente.</p>
+</section>
+
+<section class="section">
+    <h2>Entre em Contato</h2>
+    <p>Fale diretamente comigo pelo WhatsApp para orientação inicial e esclarecimento de dúvidas.</p>
+    <a class="btn" href="https://wa.me/5543984171793" target="_blank" rel="noopener noreferrer">
+        Falar pelo WhatsApp
+    </a>
 </section>
 
 <!-- BOTÃO FLUTUANTE WHATSAPP -->
