--- a/artigo-bpc-loas.html
+++ b/artigo-bpc-loas.html
@@ -2,10 +2,20 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>BPC/LOAS – Quem tem direito? | Artigo Jurídico</title>
+    <title>BPC/LOAS – Quem tem direito? | Marcelo Beltrame – Advogado</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Artigo jurídico sobre os requisitos para concessão do Benefício de Prestação Continuada (BPC/LOAS), baseado em renda, deficiência, idade e CadÚnico.">
+    <!-- SEO -->
+    <meta name="description" content="Entenda quem tem direito ao Benefício de Prestação Continuada (BPC/LOAS), seus requisitos, critérios de renda, avaliação social e médica. Artigo jurídico elaborado por Marcelo Beltrame, Advogado.">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="BPC/LOAS – Quem tem direito?">
+    <meta property="og:description" content="Artigo explicativo sobre o BPC/LOAS – requisitos, renda, CadÚnico, avaliação médica e orientações importantes.">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://marcelobeltrameadv.com.br/artigo-bpc-loas.html">
+    <meta property="og:image" content="https://marcelobeltrameadv.com.br/assets/img/logo1.png">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,92 +33,54 @@
 </header>
 
 <section class="section">
+    <h1 style="color:#0b132b; font-size:30px; margin-bottom:18px;">BPC/LOAS – Quem tem direito?</h1>
 
-    <h1 style="font-size:30px; color:#0b132b; margin-bottom:20px;">BPC/LOAS: Quem tem direito?</h1>
+    <p>O Benefício de Prestação Continuada (BPC), previsto na Lei Orgânica da Assistência Social (LOAS), garante <strong>um salário mínimo mensal</strong> a pessoas em situação de vulnerabilidade social. É um benefício <strong>assistencial</strong>, ou seja, <strong>não exige contribuições ao INSS</strong>.</p>
 
-    <p style="font-size:18px;">
-        O Benefício de Prestação Continuada (BPC), previsto na Lei Orgânica da Assistência Social (LOAS), 
-        garante um salário mínimo mensal a pessoas em situação de vulnerabilidade. O conteúdo deste artigo 
-        foi elaborado com base no material informativo fornecido no arquivo PDF do carrossel do Instagram 
-        :contentReference[oaicite:1]{index=1}.
-    </p>
-
-    <hr style="margin:25px 0;">
-
-    <!-- SEÇÃO 1 -->
-    <h2>O que é o BPC/LOAS?</h2>
-    <p>
-        Conforme destacado na página 2 do material :contentReference[oaicite:2]{index=2}, 
-        o BPC garante um salário mínimo por mês para:
-    </p>
+    <h2>Quem pode receber o BPC?</h2>
+    <p>O benefício é direcionado a dois grupos:</p>
 
     <ul>
-        <li><strong>Idosos a partir de 65 anos</strong>;</li>
-        <li><strong>Pessoas com deficiência</strong> de qualquer idade.</li>
+        <li><strong>Idosos com 65 anos ou mais</strong>;</li>
+        <li><strong>Pessoas com Deficiência</strong> de qualquer idade que tenham impedimentos de longo prazo.</li>
     </ul>
 
-    <p>
-        O benefício tem natureza <strong>assistencial</strong>, não previdenciária.  
-        Assim, <strong>não exige contribuições anteriores ao INSS</strong>.
-    </p>
+    <h2>Requisitos principais</h2>
 
-    <hr style="margin:25px 0;">
+    <h3>✔ Renda familiar per capita inferior a 1/4 do salário mínimo</h3>
+    <p>A renda de todos os integrantes do núcleo familiar é avaliada. Em alguns casos, despesas essenciais podem ser consideradas para comprovar vulnerabilidade.</p>
 
-    <!-- SEÇÃO 2 -->
-    <h2>Requisitos essenciais</h2>
+    <h3>✔ Inscrição ativa no CadÚnico</h3>
+    <p>O cadastro deve estar atualizado nos últimos 2 anos.</p>
 
-    <p>Na página 3 do PDF, os critérios básicos aparecem assim :contentReference[oaicite:3]{index=3}:</p>
+    <h3>✔ Avaliação social e médica</h3>
+    <p>No caso de pessoas com deficiência, o INSS realiza avaliação biopsicossocial para confirmar impedimentos de longo prazo.</p>
 
+    <h3>✔ Não acumular com outros benefícios</h3>
+    <p>O BPC não pode ser recebido junto com aposentadorias ou outros benefícios previdenciários.</p>
+
+    <h2>Informações importantes</h2>
     <ul>
-        <li><strong>Baixa renda familiar</strong> – renda per capita de até 1/4 do salário mínimo;</li>
-        <li><strong>Inscrição ativa no CadÚnico</strong>;</li>
-        <li><strong>Comprovação de deficiência</strong> que gere impedimentos de longo prazo (se for PcD);</li>
-        <li><strong>Não receber aposentadoria</strong>.</li>
+        <li>O BPC <strong>não dá direito a 13º salário</strong>;</li>
+        <li>Não gera <strong>pensão por morte</strong>;</li>
+        <li>Não se transforma em aposentadoria;</li>
+        <li>Gastos médicos e terapias podem auxiliar na avaliação de vulnerabilidade;</li>
+        <li>A manutenção do benefício exige atualização periódica no CadÚnico.</li>
     </ul>
 
-    <p>
-        Em muitos casos, despesas essenciais (remédios, tratamentos, terapias) podem ser usadas para demonstrar 
-        a insuficiência econômica do núcleo familiar.
-    </p>
+    <h2>Conclusão</h2>
+    <p>O BPC/LOAS é um mecanismo essencial de proteção social. Como cada caso possui particularidades, a orientação jurídica profissional pode auxiliar na análise dos requisitos, na preparação de documentos e em eventuais recursos administrativos ou judiciais.</p>
 
-    <hr style="margin:25px 0;">
+    <p style="margin-top:22px; font-weight:bold;">Procure um advogado de sua confiança.</p>
 
-    <!-- SEÇÃO 3 -->
-    <h2>Verdades rápidas sobre o BPC</h2>
-
-    <p>Baseado na página 4 do material :contentReference[oaicite:4]{index=4}:</p>
-
-    <ul>
-        <li>O BPC <strong>não se transforma em aposentadoria</strong> e <strong>não deixa pensão por morte</strong>;</li>
-        <li><strong>Não paga 13º salário</strong>;</li>
-        <li>Gastos médicos podem ajudar na comprovação de renda insuficiente;</li>
-        <li><strong>Não é necessário ter contribuído</strong> para o INSS.</li>
-    </ul>
-
-    <hr style="margin:25px 0;">
-
-    <!-- SEÇÃO 4 -->
-    <h2>Considerações finais</h2>
-
-    <p>
-        O BPC/LOAS é um benefício essencial para proteger idosos e pessoas com deficiência em situação de vulnerabilidade.  
-        Por ser assistencial, sua concessão exige análise técnica detalhada da renda familiar e, no caso de PcD, avaliação social e médica.
-    </p>
-
-    <p>
-        A recomendação constante na página 5 do material reforça a importância de que o interessado procure orientação jurídica:  
-        <em>“Procure um advogado de sua confiança.”</em> :contentReference[oaicite:5]{index=5}
-    </p>
-
-    <!-- CTA -->
-    <a class="btn" href="https://wa.me/5543984171793" target="_blank" style="margin-top:25px;">
-        Falar pelo WhatsApp
-    </a>
-
-    <br><br>
-    <a href="blog.html" style="color:#0b132b; font-size:16px; text-decoration:underline;">← Voltar para os artigos</a>
-
+    <a class="btn" href="blog.html" style="margin-top:25px;">← Voltar aos Artigos</a>
 </section>
+
+<!-- BOTÃO FLUTUANTE -->
+<a href="https://wa.me/5543984171793"
+   class="whatsapp-float"
+   target="_blank"
+   rel="noopener noreferrer">☎</a>
 
 <footer>
     <p>© 2025 – Marcelo Beltrame – Advogado – OAB/PR 113541</p>
