--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title>Marcelo Beltrame | Advogado em Ivaiporã – Direito Civil, Consumidor, Família, Trabalho e Previdenciário</title>
 
     <meta name="description" content="Advogado em Ivaiporã – Direito Civil, Família, Consumidor, Previdenciário, Empresarial e Trabalhista. Atendimento técnico, ético e humanizado. OAB/PR 113541.">
-
     <meta name="keywords" content="advogado, advogado Ivaiporã, direito civil, direito de família, direito do consumidor, direito previdenciário, direito trabalhista, consultoria jurídica, Ivaiporã, Paraná, advogado empresarial">
-
     <meta name="author" content="Marcelo Beltrame – OAB/PR 113541">
-
     <meta name="robots" content="index, follow">
 
     <meta property="og:title" content="Marcelo Beltrame | Advogado">
@@ -38,48 +35,13 @@
 
 <section class="hero">
     <img src="assets/img/logo1.png" alt="Marca Marcelo Beltrame" style="height:160px; margin-bottom:18px;">
-
-    <!-- H1 PRINCIPAL – CORRIGIDO -->
     <h1>Marcelo Beltrame – Advogado</h1>
-
     <p>Direito Civil • Família • Consumidor • Empresarial • Previdenciário • Trabalhista</p>
-
-    <a class="btn" href="https://wa.me/5543984171793" target="_blank" rel="noopener noreferrer">
-        Fale pelo WhatsApp
-    </a>
+    <a class="btn" href="https://wa.me/5543984171793" target="_blank">Fale pelo WhatsApp</a>
 </section>
 
-<section class="section">
-    <h2>Atuação Jurídica Especializada</h2>
-    <p>Atendimento técnico, ético e humanizado...</p>
-    <p>O escritório concentra sua atuação em demandas...</p>
-</section>
-
-<section class="section">
-    <h2>Áreas de Atuação</h2>
-    <ul>
-        <li>Direito Civil – contratos, responsabilidade civil, cobranças e obrigações.</li>
-        <li>Direito de Família – divórcio, guarda, visitas, pensão alimentícia.</li>
-        <li>Direito do Consumidor – negativação indevida, vício de produto, cobranças abusivas.</li>
-        <li>Direito Trabalhista – horas extras, advertências, assédio moral e rescisões.</li>
-        <li>Direito Previdenciário – aposentadorias, BPC/LOAS, revisões e indeferimentos.</li>
-    </ul>
-</section>
-
-<section class="section">
-    <h2>Como Posso Ajudar</h2>
-    <p>O atendimento é realizado com escuta ativa...</p>
-</section>
-
-<section class="section">
-    <h2>Entre em Contato</h2>
-    <p>Fale diretamente comigo pelo WhatsApp...</p>
-    <a class="btn" href="https://wa.me/5543984171793" target="_blank" rel="noopener noreferrer">
-        Falar pelo WhatsApp
-    </a>
-</section>
-
-<a href="https://wa.me/5543984171793" class="whatsapp-float" target="_blank" rel="noopener noreferrer">☎</a>
+<!-- Botão WhatsApp flutuante -->
+<a href="https://wa.me/5543984171793" class="whatsapp-float" target="_blank">☎</a>
 
 <footer>
     <p>© 2025 – Marcelo Beltrame – Advogado – OAB/PR 113541</p>
