--- a/sobre.html
+++ b/sobre.html
@@ -2,18 +2,20 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Sobre – Marcelo Beltrame</title>
+    <title>Sobre o Advogado – Marcelo Beltrame</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Conheça o advogado Marcelo Beltrame, sua forma de atuação e princípios profissionais.">
+    <meta name="description" content="Conheça o advogado Marcelo Beltrame, OAB/PR 113541. Atuação técnica, ética e humanizada em Direito Civil, Família, Consumidor, Previdenciário, Empresarial e Trabalhista.">
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header>
     <img src="assets/img/logo2.png" alt="Logo Marcelo Beltrame Advocacia">
     <nav>
         <a href="index.html">Início</a>
-        <a href="sobre.html" class="active">Sobre</a>
+        <a href="sobre.html">Sobre</a>
         <a href="atuacao.html">Atuação</a>
         <a href="blog.html">Artigos</a>
         <a href="contato.html">Contato</a>
@@ -22,23 +24,33 @@
 
 <section class="section">
 
-    <h2>Sobre o Advogado</h2>
-
-    <!-- BLOCO COM FOTO + TEXTO (imagem agora à direita) -->
     <div class="sobre-container">
 
+        <!-- TEXTO -->
         <div class="sobre-texto">
+            <h1 style="color:#0b132b; font-size:30px; margin-bottom:20px;">Sobre o Advogado</h1>
+
             <p>Marcelo Beltrame é advogado inscrito na OAB/PR 113541, com atuação voltada à solução estratégica de conflitos e à orientação jurídica preventiva. Seu trabalho é pautado na ética, na responsabilidade técnica e na clareza na comunicação com o cliente.</p>
+
             <p>Atua nas áreas de Direito Civil, Família, Consumidor, Empresarial, Previdenciário e Trabalhista, tanto na esfera consultiva quanto contenciosa, buscando sempre a melhor alternativa jurídica possível em cada situação.</p>
+
             <p>O atendimento é realizado de forma personalizada, com análise detalhada dos documentos e dos fatos apresentados, prezando pela transparência quanto a riscos, prazos e potenciais desdobramentos do processo ou da negociação.</p>
         </div>
 
+        <!-- FOTO (AGORA SEM QUALQUER STYLE INLINE) -->
         <div class="sobre-foto">
-            <img src="assets/img/marcelo-about.png.png" alt="Foto do advogado Marcelo Beltrame">
+            <img src="assets/img/eu.png" alt="Foto Marcelo Beltrame">
         </div>
 
     </div>
+
 </section>
+
+<!-- BOTÃO FLUTUANTE WHATSAPP -->
+<a href="https://wa.me/5543984171793"
+   class="whatsapp-float"
+   target="_blank"
+   rel="noopener noreferrer">☎</a>
 
 <footer>
     <p>© 2025 – Marcelo Beltrame – Advogado – OAB/PR 113541</p>
